# cuncurrent-word-count

./: CMakeLists.txt  main.cpp
archive_handler/include/: archive_handler.h
conf_handler/: conf_handler.cpp  conf_handler.h
files/: out.txt  res_a.txt  res_n.txt  result_by_name.txt  result_by_number.txt
synch_queue/include/: synch_queue.h
synch_queue/src/: synch_queue.cpp
word_counter/: WordCounter.cpp  WordCounter.h  map_merging.cpp  map_merging.h
